<resources>
    <string name="app_name">MyNotePad</string>
    <string name="city_list">Список городов</string>
    <string name="notes">Заметки</string>
    <string name="about">О приложении</string>
    <string name="sitings">Настройки</string>
    <string name="basket">Удалить</string>
    <string name="hello_blank_fragment">Это классное приложение , просто афигенное, оно такое афигенное , просто афигенней некуда, так что переводите бабки на дальнейшую разработку. Реквезиты : карта 546546648865 Сбер.</string>
    <string name="save">Записать</string>
    <string name="note_title">Название</string>
    <string name="back">Назад</string>
    <string name="text">Текст</string>
    <string name="new_note">Новая заметка</string>
    <string name="title">Название</string>
    <string name="note">Заметка</string>
    <string name="hello">hello</string>
    <string name="exit">Exit</string>
    <string name="photos">Фото альбом</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="user">Пользователь</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="login">Авторизация</string>
    <string name="main">Главная</string>
    <string name="find">Поиск</string>
    <string name="no_notes">Нет записей</string>
    <string name="insert_date">Вставить дату</string>
    <string name="register">Регистрация</string>
    <string name="login_register">Login</string>
    <string name="password">Password</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="cities">Города</string>
    <string name="note_name">Название заметки</string>
</resources>