<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/t_v_note"
            style="@style/my_text_view_style"
            android:text="@string/notes" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/t_v_city"
            style="@style/my_text_view_style"
            android:text="@string/city_list" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/t_v_sitings"
            style="@style/my_text_view_style"
            android:text="@string/sitings" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/t_v_about"
            style="@style/my_text_view_style"
            android:text="@string/about" />

    </LinearLayout>
</ScrollView>