<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/fon"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:fontFamily="@font/torhok"
        android:padding="10dp"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:src="@drawable/cat"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/torhok"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/text_view_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/lastname"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>