<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/t_in_title"
                android:layout_width="390dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:hint="@string/note_title"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/t_in_text"
                android:layout_width="390dp"
                android:layout_height="110dp"
                android:layout_margin="10dp"
                android:hint="@string/text"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:layout_marginStart="250dp"
            android:textColor="@color/black"
            android:text="@string/save"
            android:textSize="24sp"
            android:fontFamily="@font/torhok"
            android:textStyle="bold"
            android:background="@drawable/switch_button_color"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:layout_marginStart="250dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/back"
            android:textSize="24sp"
            android:fontFamily="@font/torhok"
            android:textStyle="bold"
            android:background="@drawable/switch_button_color"
            />
        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>